[package]
name = "ocentra-games"
version = "0.1.0"
description = "On-chain Solana program for multiplayer games (card games, word puzzles, etc.)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ocentra_games"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
# solana-program removed - use anchor_lang::solana_program instead
uuid = { version = "0.8", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

[lints.rust]
# Allow `cfg(target_os = "solana")` used by Anchor framework and Solana programs
# This is the standard configuration for Solana/Anchor projects
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
